# Estructura_De_Datos

./: EjArray.c  Ejercicio1.c  Ejercicio2.c  PrimerEjercicio.c
MemoriaDinamica/: DevoradorMemoria.c  Ejemplo1.c  Ejemplo2.c  Ejemplo3.c  ListaEnlazada.c  Mdinamica.c  PedirMemoria.c  fugamemoria.c
MemoriaDinamica/Cola/: CMakeLists.txt
MemoriaDinamica/Cola/src/: principal.c
MemoriaDinamica/Cola/src/ColaL/: cola.c  cola.h
PunterosArrays/: ejemplo1.c  ejercicio1.c  ejercicio2.c  ejercicio4.c
TipoPuntero/: ejemplo1.c  ejercicio1.c  ejercicio2.c  ejercicio3.c
